# originalclock

./: Makefile.am  README.md  ReadMe.txt  config_en.ui  config_ja.ui  configure.ac  main.cpp
